--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Landing Page - Start Bootstrap Theme</title>
+  <title>Corre que eu agrei - Lordaeron</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -99,6 +99,7 @@
                 <p><span >Shamans: </span><span id="shamans-count">[shamans-count]</span></p>
                 <p><span >Druids: </span><span id="druids-count">[druids-count]</span></p>
                 <p><span >Warlocks: </span><span id="warlocks-count">[warlocks-count]</span></p>
+                <p><span >Priests: </span><span id="priests-count">[priests-count]</span></p>
               </div>
             </div>
           </div>
